--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
     margin: 0 auto;
     font-family: 'Abril Fatface', cursive;
-  background: black;
+
 
 }
 
 .container {
     display: flex;
     justify-content: space-around;
- background: rgba(128,0,0, 0.5);
+ background: #470000;
     height: 100vh;
   width: 100vw;
 }
@@ -27,6 +27,7 @@ body {
 background: black;
   color: orange;
   border-radius: 8%;
+  justify-content: center;
 }
 button{
   display: inline-block;
@@ -40,7 +41,19 @@ button{
   border-radius: 25%;
 }
 button:hover{
-  background: red;
+  background: green;
   -webkit-transform: translateY(-5px);
 	transform: translateY(-3px);
 }
+footer{
+  position: absolute;
+  margin-top: 80%;
+}
+#reset{
+  border-radius: 10%;
+}
+#reset:hover{
+   background: red;
+}
+
+
